--- a/package.json
+++ b/package.json
@@ -6,8 +6,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.1",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1",
+        "@vitejs/plugin-vue": "^4.5.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-storybook": "^0.6.15",
+        "eslint-plugin-vue": "^9.18.1",
         "laravel-vite-plugin": "^0.8.0",
+        "ts-loader": "^9.5.1",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "axios": "^1.6.1"
     }
 }
