--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
         "eslint-plugin-storybook": "^0.6.15",
         "eslint-plugin-vue": "^9.18.1",
         "laravel-vite-plugin": "^0.8.0",
+        "tailwind-merge": "^2.1.0",
         "tailwindcss": "^3.3.6",
         "ts-loader": "^9.5.1",
         "tslib": "^2.6.2",
-        "tw-merge": "^0.0.1-alpha.3",
         "typescript": "^5.3.2",
         "vite": "^4.0.0"
     },
