--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/container-queries": "^0.1.1",
+        "@tailwindcss/forms": "^0.5.7",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
         "@vitejs/plugin-vue": "^4.5.0",
@@ -18,6 +20,7 @@
         "eslint-plugin-storybook": "^0.6.15",
         "eslint-plugin-vue": "^9.18.1",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss-mixins": "^9.0.4",
         "tailwind-merge": "^2.1.0",
         "tailwindcss": "^3.3.6",
         "ts-loader": "^9.5.1",
@@ -26,6 +29,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "axios": "^1.6.1"
+        "@floating-ui/dom": "^1.5.3",
+        "axios": "^1.6.1",
+        "focus-trap-vue": "^4.0.3",
+        "hotkeys-js": "^3.12.2",
+        "pinia": "^2.1.7"
     }
 }
