--- a/fly.toml
+++ b/fly.toml
@@ -26,6 +26,12 @@ console_command = "php /var/www/html/artisan tinker"
 [env]
   APP_NAME = "Laravel Philippines"
   APP_ENV = "production"
+  DB_CONNECTION = "mysql"
+  DB_HOST = "ap-southeast.connect.psdb.cloud"
+  DB_PORT = 3306
+  DB_DATABASE = "laravelph"
+  MYSQL_ATTR_SSL_CA = "/etc/ssl/certs/ca-certificates.crt"
+  QUEUE_CONNECTION = "redis"
   LOG_CHANNEL = "stderr"
   LOG_LEVEL = "info"
   LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
