--- a/fly.toml
+++ b/fly.toml
@@ -27,9 +27,10 @@ console_command = "php /var/www/html/artisan tinker"
   APP_NAME = "Laravel Philippines"
   APP_ENV = "production"
   APP_URL = "https://laravel.ph"
+  APP_DEBUG = "true"
   DB_CONNECTION = "mysql"
   DB_HOST = "ap-southeast.connect.psdb.cloud"
-  DB_PORT = 3306
+  DB_PORT = "3306"
   DB_DATABASE = "laravelph"
   MYSQL_ATTR_SSL_CA = "/etc/ssl/certs/ca-certificates.crt"
   QUEUE_CONNECTION = "redis"
